--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,7 @@ p{
     top: 20px;
 	opacity: 1;
 }
-.slick-dots li.slick-active button:before
-{
+.slick-dots li.slick-active button:before {
 	opacity: 1;
     color: #d75430;
 }
